# flow-io-opencv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
alley_1_flow/: frame_0006.flo  frame_0007.flo  frame_0008.flo  frame_0009.flo  frame_0010.flo
cli/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  README-FlowIO.md  flowIO.cpp  flowIOOpenCVWrapper.cpp  flowIOOpenCVWrapper.h  motiontocolor.cpp
lib/imageLib/: CMakeLists.txt  ImageIO.cpp  License.txt  README-StereoMatcher.md  README.md
